# LLMTraceFX

./: .gitignore  DEPLOYMENT_GUIDE.md  Makefile  README.md  generate_trace.py  launch_dashboard.py  pyproject.toml
llmtracefx/: main.py  modal_app.py  realtime_dashboard.py  requirements.txt
llmtracefx/api/: serve.py
llmtracefx/explainer/: claude.py
llmtracefx/profiler/: fusion_suggester.py  gpu_analyzer.py  trace_parser.py
llmtracefx/utils/: config.py
llmtracefx/visualize/: flame.py
output/output_hf_2k_b1/: analysis_data.json  dashboard.html  flame_graph.html  report.txt
output/output_hf_8k_b1/: analysis_data.json  dashboard.html  flame_graph.html  report.txt
output/output_opt_2k_b1/: analysis_data.json  dashboard.html  flame_graph.html  report.txt
output/output_opt_8k_b1/: analysis_data.json  dashboard.html  flame_graph.html  report.txt
